--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,6 +2,11 @@ name: Deploy
 
 on:
   workflow_dispatch:
+    inputs:
+      environment:
+        type: environment
+        required: true
+        description: prod or dev
 
 jobs:
   deployment:
