--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -17,7 +17,7 @@ jobs:
   deployment:
     runs-on: ubuntu-latest
     environment:
-      name: prod
+      name: ${{ inputs.environment }}
     steps:
       - name: deploy
         run: echo 'start deploy'
