--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -22,6 +22,9 @@ jobs:
     steps:
       - name: ci-cd2
         run: echo 'start ci-cd2'
+      - name: run
+        if: ${{inputs.environment}} == ('stg' || 'prod')
+        run: echo ${{inputs.environment}}
     needs: ci
   ci3:
     runs-on: ubuntu-latest
