--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -24,7 +24,7 @@ jobs:
         run: echo 'start ci-cd2'
       - name: run
         if: ${{inputs.environment}} == ('stg' || 'prod')
-        run: echo ${{inputs.environment}}
+        run: echo 'dev'
     needs: ci
   ci3:
     runs-on: ubuntu-latest
